--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,11 @@ div {
   height: 100%;
   background-color: black;
   color: white;
-  position: relative;
-  top: -47px;
+  position: absolute;
+  top: 0;
+  -webkit-flex: none;
+      -ms-flex: none;
+          flex: none;
 }
 
 section {
@@ -45,6 +48,14 @@ section {
 
 p {
   padding: 0px 50px;
+}
+
+.li_active {
+  background-color: lime;
+}
+
+.li_open {
+  max-height: 400px;
 }
 
 @media screen and (max-width: 600px) {
